syntax = "proto3";

package keyvalue;

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    bool success = 1;
}

service KeyValueService {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Put(PutRequest) returns (PutResponse);
}
