syntax = "proto3";
option go_package = "sixletters/simple-db/proto";
package kv_store;

message KeyValue {
    string key = 1;
    string value = 2;
}

message Key {
    string key = 1;
}

message Value {
    string value = 1;
}

service SimpleDB {
    rpc Get(Key) returns (Value);
    rpc Put(KeyValue) returns (KeyValue);
}